--- a/.env.example
+++ b/.env.example
@@ -19,8 +19,18 @@ AUTH_SECRET=""
 # AUTH_DISCORD_ID=""
 # AUTH_DISCORD_SECRET=""
 
-# Drizzle
-DATABASE_URL="file:./sqlite.db"
+# PostgreSQL Database Connection
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/construction_quotes"
+
+# App Settings
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="your-secret-here-minimum-32-characters-long"
+
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Environment variables need to be set in .env.local for local development
+# For production, set these in your hosting environment
 
 # Next.js
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
