--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "construction-quote-manager",
+  "name": "construction-quotes",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,39 +7,62 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:generate": "drizzle-kit generate:sqlite",
-    "db:push": "drizzle-kit push:sqlite",
-    "db:studio": "drizzle-kit studio"
+    "db:push": "drizzle-kit push:pg",
+    "db:studio": "drizzle-kit studio",
+    "test": "pnpx playwright test",
+    "test:ui": "pnpx playwright test --ui",
+    "test:e2e": "pnpx playwright test",
+    "test:a11y": "pnpx playwright test tests/accessibility.spec.ts",
+    "test:auth": "pnpx playwright test tests/auth.spec.ts",
+    "test:quotes": "pnpx playwright test tests/quotes.spec.ts",
+    "test:install": "pnpx playwright install --with-deps"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.3",
     "@nextui-org/react": "^2.2.9",
-    "@tanstack/react-query": "^5.69.0",
-    "@trpc/client": "^10.45.2",
-    "@trpc/next": "^10.45.0",
-    "@trpc/react-query": "^10.45.0",
-    "@trpc/server": "^10.45.0",
-    "drizzle-orm": "^0.29.3",
-    "next": "14.1.0",
+    "@t3-oss/env-nextjs": "^0.12.0",
+    "@tanstack/react-query": "^5.18.1",
+    "@trpc/client": "^11.0.0-next-beta.293",
+    "@trpc/next": "^11.0.0-next-beta.293",
+    "@trpc/react-query": "^11.0.0-next-beta.293",
+    "@trpc/server": "^11.0.0-next-beta.293",
+    "@types/bcryptjs": "^3.0.0",
+    "bcryptjs": "^3.0.2",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.4",
+    "drizzle-orm": "^0.40.0",
+    "framer-motion": "^11.0.5",
+    "lucide-react": "^0.484.0",
+    "next": "15.2.4",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.2.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.50.1",
+    "postgres": "^3.4.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "sonner": "^2.0.2",
     "superjson": "^2.2.1",
-    "tailwind-merge": "^2.2.1",
-    "uuid": "^11.1.0",
-    "zod": "^3.22.4"
+    "tailwindcss": "^4.0.0-alpha.7",
+    "uuid": "^9.0.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.10.1",
+    "@playwright/test": "^1.51.1",
+    "@tailwindcss/postcss": "^4.0.17",
+    "@types/dotenv": "^8.2.0",
     "@types/node": "^20.11.19",
-    "@types/react": "^18.2.57",
-    "@types/react-dom": "^18.2.19",
-    "@types/uuid": "^10.0.0",
-    "autoprefixer": "^10.4.17",
-    "drizzle-kit": "^0.20.14",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^8.28.0",
+    "@typescript-eslint/parser": "^8.28.0",
+    "drizzle-kit": "^0.20.13",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "15.2.4",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
 }
