--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@auth/drizzle-adapter": "^1.8.0",
     "@heroui/react": "2.7.6-beta.2",
     "@hookform/resolvers": "^4.1.3",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-label": "^2.1.2",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.18.1",
@@ -51,6 +52,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "sonner": "^2.0.2",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.0.2",
