--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:generate": "drizzle-kit generate",
@@ -27,6 +28,7 @@
     "@auth/core": "^0.38.0",
     "@auth/drizzle-adapter": "^1.8.0",
     "@heroui/react": "2.7.6-beta.2",
+    "@heroui/toast": "^2.0.6",
     "@hookform/resolvers": "^4.1.3",
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-label": "^2.1.2",
@@ -52,8 +54,6 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-hot-toast": "^2.5.2",
-    "sonner": "^2.0.2",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.17",
@@ -62,9 +62,12 @@
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.10.1",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.23.0",
     "@playwright/test": "^1.51.1",
     "@tailwindcss/postcss": "^4.0.17",
     "@types/dotenv": "^8.2.0",
+    "@types/eslint": "^9.6.1",
     "@types/node": "^20.11.19",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
@@ -74,16 +77,23 @@
     "drizzle-kit": "^0.30.6",
     "eslint": "^8.56.0",
     "eslint-config-next": "15.2.4",
+    "eslint-config-next-flat": "^0.1.2",
+    "eslint-plugin-drizzle": "^0.2.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tsx": "^4.19.3",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^8.28.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
       "@heroui/shared-utils",
-      "esbuild"
+      "esbuild",
+      "sharp"
     ]
-  }
+  },
+  "packageManager": "pnpm@10.6.3"
 }
