--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
+    "fetch-ponyfill": "^7.1.0",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.484.0",
     "next": "15.2.4",
