my ai i hallucinating so i need to commit my code i think is fixable

--- a/.env
+++ b/.env
@@ -16,7 +16,8 @@ NEXTAUTH_URL="http://localhost:3000"
 # AUTH_DISCORD_SECRET=""
 
 # Drizzle
-DATABASE_URL="postgresql://postgres.yjqovkkejrzrfjjgsehd:706749Aa@@aws-0-us-east-1.pooler.supabase.com:5432/postgres"
+DATABASE_URL="postgresql://postgres.sihrfeundbkhmiiawbad:706749Aa@@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
+
 
 
 # Next.js
