--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@trpc/react-query": "^11.0.0-next-beta.293",
     "@trpc/server": "^11.0.0-next-beta.293",
     "@types/bcryptjs": "^3.0.0",
+    "@types/js-cookie": "^3.0.6",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
@@ -38,6 +39,7 @@
     "framer-motion": "^11.18.2",
     "html2canvas": "^1.4.1",
     "i18next": "^24.2.3",
+    "js-cookie": "^3.0.5",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.484.0",
     "negotiator": "^1.0.0",
