--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,6 @@
 # You can generate a new secret on the command line with:
 # npx auth secret
 # https://next-auth.js.org/configuration/options#secret
-AUTH_SECRET=""
 
 # Next Auth Discord Provider
 # AUTH_DISCORD_ID=""
@@ -23,6 +22,7 @@ AUTH_SECRET=""
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/construction_quotes"
 
 # App Settings
+# Required by NextAuth.js for authentication flows
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="your-secret-here-minimum-32-characters-long"
 
@@ -33,4 +33,5 @@ NEXTAUTH_SECRET="your-secret-here-minimum-32-characters-long"
 # For production, set these in your hosting environment
 
 # Next.js
+# Available on client-side for navigation, links and API calls
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
