--- a/package.json
+++ b/package.json
@@ -9,99 +9,80 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "typecheck:src": "tsc --noEmit -p tsconfig.app.json",
-    "typecheck:tests": "tsc -p tests/tsconfig.json --noEmit",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:generate": "drizzle-kit generate",
-    "test": "playwright test",
-    "test:ui": "playwright test --ui",
-    "test:debug": "playwright test --debug",
-    "test:headed": "playwright test --headed",
-    "test:auth": "playwright test --grep @auth",
-    "pretest:ci": "pnpm typecheck && pnpm typecheck:tests",
-    "test:ci": "playwright test",
     "i18n:cleanup": "tsx scripts/i18n-cleanup.ts"
   },
   "dependencies": {
-    "@formatjs/intl-localematcher": "^0.6.1",
-    "@heroui/react": "2.7.6-beta.2",
-    "@heroui/toast": "^2.0.6",
-    "@hookform/resolvers": "^4.1.3",
-    "@internationalized/date": "^3.7.0",
+    "@clerk/nextjs": "^5.1.5",
+    "@formatjs/intl-localematcher": "^0.5.4",
+    "@heroicons/react": "^2.1.3",
+    "@heroui/react": "^2.4.6",
+    "@hookform/resolvers": "^3.6.0",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@t3-oss/env-nextjs": "^0.12.0",
-    "@tabler/icons-react": "^3.31.0",
-    "@tanstack/react-form": "^1.2.3",
-    "@tanstack/react-query": "^5.18.1",
-    "@trpc/client": "^11.0.0-next-beta.293",
-    "@trpc/next": "^11.0.0-next-beta.293",
-    "@trpc/react-query": "^11.0.0-next-beta.293",
-    "@trpc/server": "^11.0.0-next-beta.293",
-    "@types/bcryptjs": "^3.0.0",
-    "@types/js-cookie": "^3.0.6",
-    "bcryptjs": "^3.0.2",
+    "@t3-oss/env-nextjs": "^0.10.1",
+    "@tanstack/react-query": "^5.45.1",
+    "@trpc/client": "^11.0.0-rc.374",
+    "@trpc/next": "^11.0.0-rc.374",
+    "@trpc/react-query": "^11.0.0-rc.374",
+    "@trpc/server": "^11.0.0-rc.374",
+    "@vercel/postgres": "^0.8.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "dotenv": "^16.4.7",
-    "drizzle-orm": "^0.41.0",
-    "drizzle-zod": "^0.7.1",
-    "fetch-ponyfill": "^7.1.0",
-    "framer-motion": "^11.18.2",
-    "html2canvas": "^1.4.1",
-    "i18next": "^24.2.3",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.31.2",
+    "drizzle-zod": "^0.5.1",
     "js-cookie": "^3.0.5",
-    "jspdf": "^2.5.1",
-    "lucide-react": "^0.484.0",
-    "negotiator": "^1.0.0",
-    "next": "15.2.4",
-    "next-auth": "4.24.5",
-    "next-themes": "^0.4.6",
-    "pg": "^8.14.1",
-    "postgres": "^3.4.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.55.0",
+    "lucide-react": "^0.390.0",
+    "negotiator": "^0.6.3",
+    "next": "14.2.3",
+    "next-auth": "4.24.7",
+    "next-themes": "^0.3.0",
+    "pg": "^8.11.5",
+    "postgres": "^3.4.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
+    "react-hot-toast": "^2.4.1",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.17",
-    "uuid": "^9.0.1",
-    "zod": "^3.24.2",
-    "zustand": "^5.0.3"
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss": "^3.4.3",
+    "use-debounce": "^10.0.1",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.23.0",
-    "@playwright/test": "^1.51.1",
-    "@tailwindcss/postcss": "^4.0.17",
-    "@types/dotenv": "^8.2.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.4.0",
+    "@faker-js/faker": "^8.4.1",
+    "@next/eslint-plugin-next": "^14.2.3",
+    "@types/bcrypt": "^5.0.2",
+    "@types/eslint": "^8.56.10",
+    "@types/eslint__js": "^8.42.3",
+    "@types/js-cookie": "^3.0.6",
     "@types/negotiator": "^0.6.3",
-    "@types/node": "^20.11.19",
-    "@types/react": "^19.0.12",
-    "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^8.28.0",
-    "@typescript-eslint/parser": "^8.28.0",
-    "drizzle-kit": "^0.30.6",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "15.2.4",
-    "eslint-config-next-flat": "^0.1.2",
+    "@types/node": "^20.14.2",
+    "@types/pg": "^8.11.6",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.19",
+    "drizzle-kit": "^0.22.7",
+    "eslint": "^9.4.0",
+    "eslint-config-next": "14.2.3",
+    "eslint-config-next-flat": "^1.1.0",
     "eslint-plugin-drizzle": "^0.2.3",
-    "postcss": "^8.5.3",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.19.3",
-    "typescript": "^5.3.3",
-    "typescript-eslint": "^8.28.0"
+    "postcss": "^8.4.38",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.4",
+    "tsx": "^4.15.0",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.13.0"
   },
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "@heroui/shared-utils",
-      "core-js",
-      "esbuild",
-      "sharp"
-    ]
+  "engines": {
+    "node": ">=18.17.0"
   },
-  "overrides": {
-    "punycode": "^2.3.1"
-  }
+  "packageManager": "pnpm@9.1.4"
 }
