feat: Align content & styles with requirements - Update homepage, use external registration form, simplify nav, refine styles

--- a/.env
+++ b/.env
@@ -16,8 +16,8 @@ NEXTAUTH_URL="http://localhost:3000"
 # AUTH_DISCORD_SECRET=""
 
 # Drizzle
-DATABASE_URL="postgresql://postgres.sihrfeundbkhmiiawbad:706749Aa@@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
-
+# DATABASE_URL="postgresql://postgres.sihrfeundbkhmiiawbad:706749Aa@@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
+DATABASE_URL=postgres://neondb_owner:npg_V68yApcEoNBS@ep-floral-glade-a1z3f6j7-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
 
 # Next.js
 # Available on client-side for navigation, links and API calls
