--- a/package.json
+++ b/package.json
@@ -15,74 +15,63 @@
     "i18n:cleanup": "tsx scripts/i18n-cleanup.ts"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.1.5",
-    "@formatjs/intl-localematcher": "^0.5.4",
-    "@heroicons/react": "^2.1.3",
-    "@heroui/react": "^2.4.6",
-    "@hookform/resolvers": "^3.6.0",
-    "@paralleldrive/cuid2": "^2.2.2",
-    "@t3-oss/env-nextjs": "^0.10.1",
-    "@tanstack/react-query": "^5.45.1",
-    "@trpc/client": "^11.0.0-rc.374",
-    "@trpc/next": "^11.0.0-rc.374",
-    "@trpc/react-query": "^11.0.0-rc.374",
-    "@trpc/server": "^11.0.0-rc.374",
-    "@vercel/postgres": "^0.8.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "date-fns": "^3.6.0",
-    "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.31.2",
-    "drizzle-zod": "^0.5.1",
+    "@formatjs/intl-localematcher": "^0.6.1",
+    "@heroui/react": "2.7.6-beta.2",
+    "@hookform/resolvers": "^5.0.1",
+    "@neondatabase/serverless": "^1.0.0",
+    "@t3-oss/env-nextjs": "^0.12.0",
+    "@tailwindcss/postcss": "^4.1.3",
+    "@tanstack/react-query": "^5.72.2",
+    "@trpc/client": "^11.0.4",
+    "@trpc/next": "^11.0.4",
+    "@trpc/react-query": "^11.0.4",
+    "@trpc/server": "^11.0.4",
+    "@vercel/postgres": "^0.10.0",
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.41.0",
+    "drizzle-zod": "^0.7.1",
+    "framer-motion": "^12.6.3",
     "js-cookie": "^3.0.5",
-    "lucide-react": "^0.390.0",
-    "negotiator": "^0.6.3",
-    "next": "14.2.3",
-    "next-auth": "4.24.7",
-    "next-themes": "^0.3.0",
-    "pg": "^8.11.5",
-    "postgres": "^3.4.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.51.5",
-    "react-hot-toast": "^2.4.1",
-    "server-only": "^0.0.1",
-    "superjson": "^2.2.1",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss": "^3.4.3",
-    "use-debounce": "^10.0.1",
-    "zod": "^3.23.8",
-    "zustand": "^4.5.2"
+    "lucide-react": "^0.487.0",
+    "negotiator": "^1.0.0",
+    "next": "15.2.5",
+    "next-auth": "4.24.11",
+    "next-themes": "^0.4.6",
+    "pg": "^8.14.1",
+    "postgres": "^3.4.5",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.55.0",
+    "superjson": "^2.2.2",
+    "tailwindcss": "^4.1.3",
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.4.0",
-    "@faker-js/faker": "^8.4.1",
-    "@next/eslint-plugin-next": "^14.2.3",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.24.0",
+    "@next/eslint-plugin-next": "^15.2.5",
     "@types/bcrypt": "^5.0.2",
-    "@types/eslint": "^8.56.10",
-    "@types/eslint__js": "^8.42.3",
+    "@types/eslint": "^9.6.1",
     "@types/js-cookie": "^3.0.6",
     "@types/negotiator": "^0.6.3",
-    "@types/node": "^20.14.2",
-    "@types/pg": "^8.11.6",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.19",
-    "drizzle-kit": "^0.22.7",
-    "eslint": "^9.4.0",
-    "eslint-config-next": "14.2.3",
-    "eslint-config-next-flat": "^1.1.0",
+    "@types/node": "^22.14.0",
+    "@types/pg": "^8.11.11",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.2",
+    "drizzle-kit": "^0.30.6",
+    "eslint": "^9.24.0",
     "eslint-plugin-drizzle": "^0.2.3",
-    "postcss": "^8.4.38",
-    "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.4",
-    "tsx": "^4.15.0",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^7.13.0"
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.1"
   },
   "engines": {
     "node": ">=18.17.0"
   },
-  "packageManager": "pnpm@9.1.4"
+  "packageManager": "pnpm@10.8.0"
 }
