--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@neondatabase/serverless": "^1.0.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tailwindcss/postcss": "^4.1.3",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.72.2",
     "@trpc/client": "^11.0.4",
     "@trpc/next": "^11.0.4",
@@ -43,6 +44,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
+    "react-markdown": "^10.1.0",
     "superjson": "^2.2.2",
     "tailwindcss": "^4.1.3",
     "zod": "^3.24.2",
